# ai-trading-system

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/analytics/: performance.py  research_evidence.py
backend/app/backtesting/: batch.py  outcomes.py  paper_validation_research.py  research_report.py  threshold_sweep.py  walk_forward.py
backend/tests/: test_api_daily_research.py  test_api_dashboard.py  test_api_ibkr.py  test_api_paper_trading.py  test_api_paper_validation_preflight.py  test_api_paper_validation_research.py  test_api_performance.py  test_api_recommendations.py  test_api_scanner.py  test_api_technicals.py  test_api_universe_presets.py  test_api_walk_forward.py  test_catalyst_classifier.py  test_catalyst_normalization.py  test_chart_patterns.py  test_config.py  test_daily_research_job.py  test_daily_research_policy.py  test_daily_research_status.py  test_daily_scan_policy.py  test_day_trading_chart_patterns.py  test_day_trading_sector.py  test_day_trading_strategy.py  test_db_schema.py  test_historical_batch.py  test_ibkr_paper.py  test_insider_activity.py  test_liquidity.py  test_market_context.py  test_massive_provider.py  test_outcome_labeling.py  test_paper_trading_simulator.py  test_paper_validation.py  test_paper_validation_research.py  test_paper_validation_research_runner.py  test_performance_analytics.py  test_provider_interfaces.py  test_providers.py  test_recommendation_persistence.py  test_recommendation_process.py  (+20 more)
backend/tmp/: research_tickers.json
(+79 files in other folders)
