[project]
name = "ai-trading-backend"
version = "0.1.0"
description = "Backend for AI Trading Recommendation Engine"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "alembic>=1.13",
  "polars>=1.0",
  "pandas>=2.2",
  "numpy>=1.26",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "apscheduler>=3.10"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.5"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
